--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "markdown-toc": "^0.13.0",
     "marked": "^0.3.6",
     "nets": "^3.2.0",
+    "os-tmpdir": "^1.0.2",
     "prompt": "^1.0.0",
     "subcommand": "^2.0.4",
     "township-client": "github:township/township-client",
